# magos

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  magos.example.yaml  main.py  pyproject.toml
.claude/skills/proxy-fixture-capture/: SKILL.md
docs/: architecture.md  cli.md  deployment.md  headroom.md  ingress.md  registry.md  routing.md
docs/architecture/: env-vars.md  gotchas.md  headers-and-auth.md  migration.md  request-flow.md  startup.md  testing.md  translation.md
docs/headroom/: backend.md  endpoint-scope.md  failure-modes.md  gotchas.md  model-limit.md  overview.md  pipeline.md
docs/registry/: auto-routing.md  cli.md  config.md  matchers.md  observability.md  overview.md
docs/routing/: api-keys.md  errors.md  examples.md  grammar.md  logging.md  matchers.md  pipeline.md
integrations/opencode/: README.md  magos.ts  package.json  tsconfig.json
scripts/: capture_agent_sdk_request.py  capture_through_magos.py  probe_anthropic_cache.py
src/magos/: __init__.py  __main__.py  addon.py  config.py  config_loader.py  obs.py  passthrough.py  process.py  proxy.py  serve.py  server.py  tokens.py  translation.py
src/magos/api/: __init__.py  admin.py  app.py  build.py  handlers.py  headers.py  models.py  run.py
src/magos/cache/: __init__.py  session_id.py  store.py  tracker.py
src/magos/ccr/: __init__.py  continuation.py  detection.py  handler.py
src/magos/cli/: __init__.py  _helpers.py  admin_client.py  app.py  models.py  models_cmd.py  serve.py
src/magos/compression/: __init__.py  build.py  config.py  pipeline.py  registry.py  warmup.py
src/magos/config/: __init__.py  loader.py  schema.py  settings.py
src/magos/dispatch/: __init__.py  auth.py  passthrough.py  tokens.py
src/magos/egress/: __init__.py  auth.py  dispatch.py  errors.py  observer.py  passthrough.py  tokens.py  translate.py  usage.py
src/magos/ingress/: __init__.py  addon.py  log_bridge.py  master.py
src/magos/proxy/: __init__.py  build.py  listener.py  log_bridge.py
src/magos/registry/: __init__.py  deprecation.py  litellm_lookup.py  merge.py  models.py  obs.py  pipeline.py  provider_order.py  refresher.py  schema.py  state.py  store.py  telemetry.py
src/magos/routing/: __init__.py  auto_route.py  decision.py  dispatch.py  engine.py  errors.py  jq_compat.py  loader.py  matchers.py  models.py  request.py  rewrites.py  schema.py  transform.py
src/magos/service/: __init__.py  build.py  request.py
src/magos/shapes/: __init__.py  _spec.py  anthropic.py  base.py  openai_chat.py  openai_responses.py  usage.py
src/magos/telemetry/: __init__.py  logging.py  metrics.py  tracing.py
src/magos/translation/: __init__.py  _models.py  _shared.py  forward.py  reverse.py  streaming.py
tests/: conftest.py  test_addon.py  test_cli_main.py  test_cli_models.py  test_config.py  test_config_loader.py  test_e2e.py  test_e2e_agent_sdk.py  test_ingress_addon.py  test_ingress_log_bridge.py  test_main_module.py  test_obs.py  test_passthrough.py  test_proxy.py  test_registry_deprecation.py  test_registry_discovery_adapters.py  test_registry_followups.py  test_registry_litellm_lookup.py  test_registry_merge.py  test_registry_models.py  test_registry_obs.py  test_registry_refresher.py  test_registry_schema.py  test_registry_state.py  test_registry_store.py  test_reverse_translation.py  test_routing_engine.py  test_routing_engine_registry.py  test_routing_loader.py  test_routing_matchers.py  test_routing_matchers_registry.py  test_routing_models.py  test_routing_rewrites.py  test_routing_rewrites_registry.py  test_serve.py  test_server.py  test_server_registry.py  test_smoke.py  test_stream_translator.py  test_telemetry.py  (+3 more)
tests/api/: _helpers.py  test_chat_completions.py  test_count_tokens.py  test_messages.py  test_models.py  test_responses.py  test_run.py  test_server_registry.py
tests/api/lifespan/: test_components.py  test_kompress.py
tests/cache/: test_session_id.py  test_store.py  test_tracker.py
tests/ccr/: test_continuation.py  test_detection.py  test_handler.py  test_handler_streaming.py
tests/cli/: test_admin_client.py  test_main.py  test_models.py
tests/compression/: test_build.py  test_config.py  test_pipeline.py  test_registry.py  test_warmup.py
tests/compression/ccr/: test_continuation.py  test_detection.py  test_handler.py  test_handler_streaming.py
tests/compression/engine/: test_cache.py
tests/compression/tracker/: test_session_id.py  test_store.py  test_tracker.py
tests/config/: test_loader.py  test_settings.py
tests/dispatch/: test_auth.py  test_dispatch.py  test_passthrough.py  test_tokens.py
tests/dispatch/gateway/: test_measured.py  test_tracing.py
tests/dispatch/translate/: test_payload.py  test_runner.py  test_safe_stream.py
tests/dispatch/usage/: test_accumulator.py  test_core.py  test_tap.py
tests/e2e/: _helpers.py  conftest.py  test_anthropic_passthrough.py  test_anthropic_translate.py  test_compress.py  test_e2e.py  test_e2e_agent_sdk.py  test_openai.py
tests/egress/: test_auth.py  test_dispatch.py  test_observer.py  test_passthrough.py  test_usage.py
tests/egress/translate/: test_anthropic.py  test_payload.py  test_runner.py
tests/egress/usage/: test_accumulator.py  test_core.py  test_tap.py
tests/fixtures/: magos.test.yaml
tests/ingress/http/: _helpers.py  test_chat_completions.py  test_lifespan.py  test_messages.py  test_run.py  (+3 more)
tests/proxy/: test_addon.py  test_e2e.py  test_log_bridge.py  test_observer.py
tests/registry/: test_deprecation.py  test_discovery_adapters.py  test_followups.py  test_litellm_lookup.py  test_merge.py  test_obs.py  test_pipeline.py  test_provider_order.py  test_refresher.py  test_schema.py  test_state.py  test_store.py  test_telemetry.py
tests/routing/: _helpers.py  test_auto_route.py  test_engine.py  test_engine_registry.py  test_errors.py  test_loader.py  test_matchers.py  test_matchers_registry.py  test_request.py  test_schema.py
tests/shapes/: test_init.py
tests/telemetry/: test_logging.py  test_metrics.py  test_tracing.py
(+176 files in other folders)
