[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magos"]

[project]
name = "magos"
version = "0.0.1"
description = "Declarative LLM API routing proxy with provider-discovered model registry and context compression."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Matthew Harris" }]
requires-python = ">=3.12,<=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "fastmcp>=2.12.5",
    "headroom-ai[all]==0.10.16",
    "jq>=1.8.0",
    "backoff>=2.2",
    "litellm>=1.82.3",
    "mitmproxy>=12.2.2",
    "orjson>=3.10",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
    "opentelemetry-exporter-prometheus>=0.62b1",
    "httpx>=0.28.1",
    "starlette>=1.0.0",
    "prometheus-client>=0.25.0",
    "typer>=0.25.1",
]

[project.scripts]
magos = "magos.cli.app:main"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "magos[cpu]",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "claude-agent-sdk>=0.1.69",
    "types-PyYAML>=6.0.12",
]

[project.optional-dependencies]
cpu = ["torch>=2.11"]
gpu = ["torch>=2.11"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "N",      # pep8-naming
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "TID",    # flake8-tidy-imports
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "S101",   # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR2004", "PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["magos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "jq"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov",
    "--cov-report=term-missing:skip-covered",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
filterwarnings = [
    # LiteLLM still accesses pydantic v2.11+ attributes via instances. Tracked
    # upstream; surfaces under every streaming test and obscures real failures.
    "ignore:Accessing the 'model_computed_fields' attribute on the instance is deprecated:pydantic.warnings.PydanticDeprecatedSince211",
    "ignore:Accessing the 'model_fields' attribute on the instance is deprecated:pydantic.warnings.PydanticDeprecatedSince211",
    # anyio MemoryObjectReceiveStream emits ResourceWarning on GC under the
    # uvicorn-in-thread fixture; httpx/anthropic similarly leaves socket FDs
    # for the OS to reap. Both are out-of-scope cleanup, not bugs in magos.
    "ignore::ResourceWarning",
    # uvicorn still imports websockets.legacy and WebSocketServerProtocol;
    # we do not use websockets, but the import path triggers the warning.
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    # mitmproxy's flowfilter / command_lexer use pyparsing's pre-2.x camelCase
    # API. Pyparsing now warns on every alias; nothing we can fix downstream.
    "ignore::pyparsing.warnings.PyparsingDeprecationWarning",
    # ldap3 (a transitive dep of mitmproxy) accesses removed pyasn1 globals
    # (tagMap, typeMap) on import.
    "ignore:tagMap is deprecated:DeprecationWarning",
    "ignore:typeMap is deprecated:DeprecationWarning",
    # SWIG-generated bindings (pulled in via pdfminer / mitmproxy chain) lack
    # __module__ on their builtin types; importlib whines on every load.
    "ignore:builtin type Swig.* has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
fail_under = 90
